# Course_work_8

./: .gitignore  .template.env  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
config/: settings.py  urls.py
habits/: models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habit_avatar_habit_tg_chat_id_habit_tg_nick_and_more.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
